--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "app.js",
   "engines": {
-    "node":"16.0",
+    "node":"16.16.0",
     "npm":"8.11.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run":"node app.js"
+    "start":"node app.js"
   },
   "author": "",
   "license": "ISC",
